Fix layout issue in edit address form

--- a/ain7/static/css/ain7.css
+++ b/ain7/static/css/ain7.css
@@ -255,3 +255,12 @@ input[type="email"], input[type="url"], input[type="search"], input[type="tel"],
 .row.action-bar {
     margin-bottom: 15px
 }
+
+.form-group > div.checkbox {
+    position: static;
+}
+
+.form-group > div.checkbox > label > input.checkboxinput {
+    position: static;
+    margin-left: 0;
+}
